@@ -1,6 +1,7 @@
 Cultibox (1.1.17) precise; urgency=low
     + Correction du calendrier: les evènements sur deux mois fonctionnent à nouveau
     + Les accents dans les fichiers calc sont maintenant bien pris en compte
+    + ajout d'un champ color possible dans les fichiers xml pour choisir la couleur de ses evènements
 
 -- Yann Genevois <yann.genevois@gmail.com> Mon Apr 29 21:45:39 CEST 2013
 
